--- a/package.json
+++ b/package.json
@@ -11,12 +11,22 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
+    "@thirdweb-dev/auth": "^4.1.16",
     "@thirdweb-dev/react": "^4",
-    "@thirdweb-dev/sdk": "^4",
-    "ethers": "^5",
+    "@thirdweb-dev/sdk": "^4.0.19",
+    "ethers": "^5.7.2",
+    "framer-motion": "^10.16.16",
+    "micro": "^10.0.1",
     "next": "^13",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "react-hook-form": "^7.48.2",
+    "stripe": "^14.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
